    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/bg_img"
            android:layout_marginTop="-100dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@mipmap/scrollview_header"
            />
        <com.idejie.android.light.widget.PullScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:headerHeight="300dp"
            app:headerVisibleHeight="100dp"
            android:fillViewport="true"
            android:id="@+id/scrollView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/scrollViewHead"
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    android:layout_marginTop="100dp"
                    android:background="@color/transparent"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:layout_marginTop="27dp"
                        android:background="@mipmap/card_avatar_bar">
                        <TextView
                            android:id="@+id/attention_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_btn"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="21dp"
                            android:layout_marginTop="6dp"
                            android:drawableLeft="@drawable/add"
                            android:drawablePadding="3dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:gravity="center_vertical"
                            android:text="@string/add_attention"
                            android:textSize="16sp"
                            android:textColor="#a1a1a1"/>
                        <TextView
                            android:id="@+id/user_post"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="113dp"
                            android:layout_marginTop="4dp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:text="@string/user_post"
                            android:textSize="14sp"
                            android:textColor="#a1a1a1"/>

                    </RelativeLayout>
                    <ImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:padding="1px"
                        android:background="@color/white"
                        android:layout_marginLeft="21dp"
                        android:contentDescription="@null"
                        android:src="@mipmap/avatar_default"
                        />
                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/user_avatar"
                        android:layout_marginLeft="13dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:shadowColor="@color/black_overlay"
                        android:shadowDx="3.0"
                        android:shadowDy="3.0"
                        android:shadowRadius="5.0"
                        android:text="@string/user_name"
                        android:textSize="24sp"
                        android:textColor="@color/white"/>
                    <FrameLayout
                        android:id="@+id/user_divider_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_avatar"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="21dp"
                        android:layout_marginRight="21dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@null"
                            android:background="#DFDFDF" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:contentDescription="@null"
                            android:src="@mipmap/arrow_up"/>


                    </FrameLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_des"
                        android:layout_below="@id/user_divider_layout"
                        android:layout_marginLeft="21dp"
                        android:layout_marginRight="21dp"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/user_des"
                        android:textSize="12sp"
                        android:textColor="#b1b1b1"/>


                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-1dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:background="#f7f4f0">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="13dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/user_recommend_tip"
                        android:textSize="12sp"
                        android:textColor="#a1a1a1"/>
                    <TableLayout
                        android:id="@+id/table_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/card_whole" />
                </LinearLayout>
            </LinearLayout>

        </com.idejie.android.light.widget.PullScrollView>
    </RelativeLayout>

